[package]
name = "api"
version = "0.1.0"
authors = ["Esteban Escobar <esteban.e.gomez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.11.1"
serde = "1.0.125"